2013-05-08  Andrey Borzenkov <arvidjaar@gmail.com>

	* docs/grub.texi (Network): Add description of net_default_interface,
	net_default_ip and net_default_mac. Rewrite variables description
	to emphasize that they are per-interface.

2013-05-08  Vladimir Serbinenko  <phcoder@gmail.com>

	New test: cmdline and cat.

2013-05-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/cat.c: Show UTF-8 characters.

2013-05-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* conf/Makefile.common: Poison float and double on non-emu.

2013-05-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Don't disable extended registers on emu.

2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Don't use extended registers on x86_64.
	Reported by: Peter Jones.

2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/efi/console.c: Fix compile error.

2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>

	Compressed HFS+ support.

2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/videoinfo.c: Use "paletted" rather than "packed
	pixel".

2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>

	Menu color test.

2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/tests/setjmp_test.c: New test.

2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>

	New variables 'net_default_*' to determine MAC/IP of default interface.

2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/gettext_strings_test.in: A test to check for strings not
	marked for translation.

2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* autogen.sh: Exclude unused libgcrypt files from translation.

2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>

	Simplify few strings.

2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>

	Mark few forgotten strings for translation.

2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/linux.c: Use grub_dprintf for debug statements
	rather than printf.
