@@ -39,8 +39,8 @@
 
 GRUB_MOD_LICENSE ("GPLv3+");
 
-#define ANSI_C0 0x9b
-#define ANSI_C0_STR "\x9b"
+#define ANSI_CSI 0x9b
+#define ANSI_CSI_STR "\x9b"
 
 static struct grub_term_output *terminfo_outputs;
 
@@ -132,14 +132,14 @@ grub_terminfo_set_current (struct grub_term_output *term,
   if (grub_strcmp ("arc", str) == 0)
     {
       data->name              = grub_strdup ("arc");
-      data->gotoxy            = grub_strdup (ANSI_C0_STR "%i%p1%d;%p2%dH");
-      data->cls               = grub_strdup (ANSI_C0_STR "2J");
-      data->reverse_video_on  = grub_strdup (ANSI_C0_STR "7m");
-      data->reverse_video_off = grub_strdup (ANSI_C0_STR "0m");
+      data->gotoxy            = grub_strdup (ANSI_CSI_STR "%i%p1%d;%p2%dH");
+      data->cls               = grub_strdup (ANSI_CSI_STR "2J");
+      data->reverse_video_on  = grub_strdup (ANSI_CSI_STR "7m");
+      data->reverse_video_off = grub_strdup (ANSI_CSI_STR "0m");
       data->cursor_on         = 0;
       data->cursor_off        = 0;
-      data->setcolor          = grub_strdup (ANSI_C0_STR "3%p1%dm"
-					     ANSI_C0_STR "4%p2%dm");
+      data->setcolor          = grub_strdup (ANSI_CSI_STR "3%p1%dm"
+					     ANSI_CSI_STR "4%p2%dm");
       return grub_errno;
     }
 
@@ -427,7 +427,7 @@ grub_terminfo_readkey (struct grub_term_input *term, int *keys, int *len,
     }
   *len = 1;
   keys[0] = c;
-  if (c != ANSI_C0 && c != '\e')
+  if (c != ANSI_CSI && c != '\e')
     {
       /* Backspace: Ctrl-h.  */
       if (c == 0x7f)
